<resources>
    <string name="app_name">ToDo</string>
    <string name="preference_file_key">user_data</string>
    <string name="user_name">name</string>
    <string name="user_email">email</string>
    <string name="user_password">password</string>
    <string name="user_account">userAccount</string>
    <string name="add_an_account_login_page">+ add an account</string>
    <string name="manage_accounts_login_page">manage accounts</string>
    <string name="sign_in_screen_text">Log in with an existing account</string>
    <string name="sign_in_screen_field1">Enter email</string>
    <string name="sign_in_screen_field2">Enter password</string>
    <string name="register_screen_text">Register a new account</string>
    <string name="register_screen_field1">Enter email</string>
    <string name="register_screen_field2">Enter name</string>
    <string name="register_screen_field3">enter surname</string>
    <string name="register_screen_field4">Enter password</string>
    <string name="register_screen_register">register</string>
    <string name="sign_in_screen_sign_in">Sign in</string>
    <string name="sign_in_screen_register">Register</string>
    <string name="manage_accounts_screen_text">Select an account to remove</string>
    <string name="task_categories_screen_add_list_text">+Add a new list</string>
    <string name="log_in_screen_text">Choose an account</string>
    <string name="menu_opt_tasks_screen_1">Edit list</string>
    <string name="menu_opt_tasks_screen_2">Delete list</string>
    <string name="menu_opt_tasks_categories_1">Import lists</string>
    <string name="menu_opt_tasks_categories_2">Export lists</string>
    <string name="task_details_add_myday_text">Add to my day</string>
    <string name="task_details_add_duedate_text">Add due date</string>
    <string name="task_details_add_a_note">Add a note</string>
    <string name="task_details_added_myday_text">Added to my day</string>
    <string name="task_details_added_duedate_text">Added due date</string>
    <string name="task_details_passed_duedate_text">Passed due date</string>
    <string name="task_details_add_important">Mark as important</string>
    <string name="task_details_added_important">Marked as important</string>
    <string name="tasks_screen_add_task_text">+ Add task</string>
    <string name="category_details_title_text_create_list">Create a list</string>
    <string name="category_details_et_hint_text">Enter list title</string>
    <string name="category_details_color_chooser_text">Choose a color</string>
    <string name="register_account_tool_tip_password1">Password must contain at least 6 characters, 1 capitalized letter 1 small letter and 1 digit at least.</string>
    <string name="register_account_tool_tip_password2">Password must match password above.</string>
    <string name="register_account_err_match">Passwords do not match</string>
    <string name="register_account_err_short">Password is too short</string>
    <string name="manage_accounts_alert_dialog_title">Are you sure?</string>
    <string name="manage_accounts_alert_dialog_yes">Yes</string>
    <string name="manage_accounts_alert_dialog_no">No</string>
    <string name="register_account_err_no_small_letters">Password must contain at least 1 english letter (a-z)</string>
    <string name="register_account_err_no_capital_letters">Password must contain at least 1 capitalized letter (A-Z)</string>
    <string name="register_account_err_no_digits">Password must contain at least 1 digit (0–9)</string>
    <string name="register_account_err_email_at_sign_missing">Email address must contain @.</string>
    <string name="register_account_err_email_no_sub_domain">Email invalid - no sub domain</string>
    <string name="register_account_err_email_no_domain">Email invalid - no domain</string>
    <string name="register_account_creation_successful">Account created successfully!</string>
    <string name="register_account_err_email_no_name">Invalid email - no name.</string>
    <string name="register_account_err_name_empty">Name field is empty.</string>
    <string name="register_account_err_surname_empty">Surname field is empty.</string>
    <string name="register_account_err_email_exists_already">This email is already used for a different account, sign in using it instead.</string>
    <string name="ext_device_id">device_id</string>
    <string name="ext_user_id">user_id</string>
    <string name="ext_list_id">list_id</string>
    <string name="ext_task_id">task_id</string>
    <string name="menu_opt_tasks_screen_3">Print list</string>
    <string name="ext_list_type">type</string>
    <string name="category_details_btn_create_create">Create</string>
    <string name="category_details_btn_create_update">Update</string>
    <string name="tasks_screen_add_task_button_text">Add task</string>
    <string name="menu_opt_tasks_details_share">Share</string>
    <string name="task_categories_logged_in_as">Logged in as:</string>
    <string name="channel_name">Channel name example</string>
    <string name="channel_description">This is a channel example</string>
    <string name="addAccountErrNoEmail">No user by this email</string>
    <string name="addAccountErrUserExistsAlready">This user has already been signed into this device.</string>
    <string name="addAccountErrWrongPassword">Incorrect password</string>
</resources>