<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="11"
    android:orientation="vertical"
    tools:context=".RegisterAccountActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/register_an_account"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/register_screen_text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/register_screen_field1"
        android:id="@+id/et_register_screen_email"
        android:inputType="textEmailAddress"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/register_screen_field2"
            android:id="@+id/et_register_screen_name"
            android:inputType="text"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/register_screen_field3"
            android:id="@+id/et_register_screen_surname"
            android:inputType="text"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/register_screen_field4"
        android:id="@+id/et_register_screen_password1"
        android:inputType="textVisiblePassword"
        android:tooltipText="@string/register_account_tool_tip_password1"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="Enter password again"
        android:id="@+id/et_register_screen_password2"
        android:inputType="textVisiblePassword"
        android:tooltipText="@string/register_account_tool_tip_password2"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:text="@string/register_screen_register"
        android:id="@+id/btn_register_screen_register"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/transparentButton"
        android:textColor="@color/blue"
        android:text="Return"
        android:id="@+id/btn_register_screen_return"
        />
</LinearLayout>