<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".AddAccountActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/add_account_img"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/sign_in_screen_text"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/sign_in_screen_field1"
        android:id="@+id/et_sign_in_screen_email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/sign_in_screen_field2"
        android:id="@+id/et_sign_in_screen_password"
        android:inputType="textVisiblePassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:text="@string/sign_in_screen_sign_in"
        android:id="@+id/btn_sign_in_screen_sign_in"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/transparentButton"
        android:textColor="@color/blue"
        android:text="@string/sign_in_screen_register"
        android:id="@+id/btn_sign_in_screen_register"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/transparentButton"
        android:textColor="@color/blue"
        android:text="Return"
        android:id="@+id/btn_sign_in_screen_return"
        />
</LinearLayout>